# Glass_box_chat

./: .commit_msg.txt  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  run-backend.cmd  run-backend.sh  run-frontend.cmd  run-frontend.sh  vercel.json
.github/instructions/: code-convention.instructions.md  model-specification.instructions.md  sdk-architecture.instructions.md  skills-agent.instructions.md  system-design.instructions.md  ui-context-requirement.instructions.md
apps/api/: requirements-bert.txt
apps/web/: .env.example  package-lock.json  package.json  vitest.config.ts
apps/web/actions/: chat-stream-action.ts
apps/web/app/: globals.css  page.tsx
apps/web/components/: chat-header.tsx  chat-input-form.tsx  chat-message-list.test.tsx  chat-message-list.tsx  chat-shell.tsx  trace-panel.tsx  workspace-overview.tsx
apps/web/hooks/: use-chat-runtime.ts
apps/web/lib/: trace-storage.ts
apps/web/models/: chat-message.ts  chat-run-request.ts  runtime-metrics.ts  trace-event.ts
apps/web/services/: api-client.ts  event-stream.ts  runtime-health.ts  runtime-history.ts  runtime-sessions.ts
apps/web/store/: trace-store.ts
apps/web/validation/: chat-schemas.ts
data/: glassbox.db  glassbox.db-shm  glassbox.db-wal
docs/: agent-execution.md  pipeline-architecture.md  spec.md
docs/migration/: backend-migration-graph-checkpoint.md
src/glass_box_chat/: __main__.py  main.py  sqlite_db.py
src/glass_box_chat/services/: planner.py  (+33 more)
tests/: test_runtime_metrics.py  test_runtime_resilience.py  test_smoke.py
(+54 files in other folders)
